Fixed 19573: Alignment Issue when create a new email template admin

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -148,7 +148,7 @@
             }
         }
 
-        &#currently_used_for {
+        &.field-currently_used_for {
             > .admin__field-control {
                 .admin__field {
                     margin-top: 8px;
